# chudovishe

./: .gitmodules
chudovishe_description/: package.xml  setup.cfg  setup.py
chudovishe_description/config/: controller_manager.yaml
chudovishe_description/launch/: rviz.launch.py
chudovishe_description/urdf/:  chudovishe_base.urdf  chudovishe_base.urdf.xacro  ros2_control.urdf.xacro
chudovishe_firmware/src/: main.cpp
chudovishe_hardware/: CMakeLists.txt  CMakeLists.txt.bak  chudovishe_hardware.xml  package.xml
chudovishe_hardware/include/chudovishe_hardware/: arduino_comms.hpp  chudovishe_hardware.hpp  chudovishe_hardware_interface.hpp  serial_port_service.hpp  serial_protocol.hpp  wheel.hpp
chudovishe_hardware/src/: arduino_comms.cpp  chudovishe_hardware.cpp  chudovishe_hardware_interface.cpp  serial_port_service.cpp
chudovishe_serial_test/: CMakeLists.txt  package.xml
chudovishe_serial_test/src/: chudovishe_serial_test.cpp
log/: latest_list
