<?xml version="1.0"?>
<package format="3">
  <name>chudovishe_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control SystemInterface for Arduino diff drive over Serial</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

<buildtool_depend>ament_cmake_auto</buildtool_depend>
<depend>hardware_interface</depend>
<depend>pluginlib</depend>
<depend>rclcpp</depend>
<depend>serial</depend>
<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>
