<?xml version="1.0"?>
<package format="3">
  <name>chudovishe_serial_test</name>
  <version>0.1.0</version>
  <description>Serial read/write test node for Chudovishe</description>

  <maintainer email="nadovich@todo.todo">nadovich</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <!-- опционально -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
