<?xml version="1.0"?>
<package format="3">
  <name>chudovishe_serial_test</name>
  <version>0.1.0</version>
  <description>Serial read/write test node for Chudovishe</description>

  <maintainer email="nadovich@todo.com">nadovich</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
